--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dayjs": "^1.10.7",
     "express": "^4.17.2",
     "mongodb": "^4.3.1"
   }
